packages/akashic-cli-serve/src/client/view/atom/TopResizable.module.css
.top-resizable {
	position: relative;
	display: flex;
	align-items: stretch;
}

.h-resizer {
	position: absolute;
	top: -3px;
	left: 0;
	width: 100%;
	height: 6px;
	border-radius: 2px;

	background: rgba(255, 255, 255, 0.01);
	cursor: ns-resize;
}

.h-resizer:active {
	background: rgba(255, 0, 0, 0.3);
}

.content {
	flex: 1 1 auto;
	box-sizing: border-box;
	display: flex;
}

